# tatara

./: .gitignore  AGENTS.md  ATTRIBUTION.md  CLAUDE.md  Cargo.toml  README.ja.md  README.md  bench-pos.local.toml.example  bench-pos.toml  rust-toolchain.toml
.github/workflows/: checks.yaml
bins/eval_sfen/: Cargo.toml
bins/eval_sfen/src/: main.rs
bins/net_from_yo/: Cargo.toml
bins/net_from_yo/src/: main.rs
bins/net_fv_scale/: Cargo.toml
bins/net_fv_scale/src/: main.rs
bins/net_header_rewrite/: Cargo.toml
bins/net_header_rewrite/src/: main.rs
bins/net_to_yo/: Cargo.toml
bins/net_to_yo/src/: main.rs
bins/nnue_train/: Cargo.toml  build.rs
bins/nnue_train/src/: arch.rs  bench_pos.rs  ckpt.rs  cli.rs  ft_factorize_host.rs  kernel_module.rs  main.rs  native_bench.rs  smoke.rs  threat_ablate.rs  trainer_common.rs  trainer_layerstack.rs  trainer_layerstack_v3.rs  trainer_simple.rs  training.rs
bins/nnue_train/src/kernels/: common.rs  layerstack.rs  mod.rs  simple.rs
bins/nnue_train/src/tests/: cli_tests.rs  ft_factorize_tests.rs  gpu_cpu_equivalence_tests.rs  mod.rs  native_bench_schema_tests.rs  native_cuda_tests.rs  raw_ckpt_format_tests.rs
bins/progress_bucket_survey/: Cargo.toml
bins/progress_bucket_survey/src/: main.rs
bins/progress_kpabs_train/: Cargo.toml
bins/progress_kpabs_train/src/: lib.rs  main.rs
bins/progress_kpabs_train/src/host/: batch.rs  cli.rs  games.rs  mod.rs  progress_bin.rs
bins/progress_kpabs_train/tests/: host_smoke.rs
bins/threat_symmetric_survey/: Cargo.toml
bins/threat_symmetric_survey/src/: main.rs
crates/cuda-native-runtime/: Cargo.toml  build.rs
crates/cuda-native-runtime/kernels/: native_kernels.cu
crates/cuda-native-runtime/src/: lib.rs  runtime.rs
crates/cuda-native-runtime/tests/: native_smoke.rs
crates/gpu-kernels/: Cargo.toml
crates/gpu-kernels/src/: lib.rs
crates/gpu-kernels/src/layerstack/: abs_pow2_scale.rs  concat_l1sqr_main.rs  crelu.rs  dense_mm.rs  dense_mm_bucket.rs  elementwise.rs  mod.rs  psqt.rs  slice2d.rs
crates/gpu-kernels/src/pointwise/: adamw_step.rs  loss_wdl.rs  loss_wrm.rs  mod.rs  norm_loss.rs  radam_step.rs  ranger_step.rs  screlu_fwd.rs  screlu_grad.rs
crates/gpu-kernels/src/progress/: adam_step.rs  eval.rs  forward.rs  grad.rs  mod.rs
crates/gpu-kernels/src/sparse/: ft_factorize.rs  mod.rs  sparse_ft_backward.rs  sparse_ft_forward.rs
crates/gpu-runtime/: Cargo.toml
crates/gpu-runtime/examples/: vecadd_demo.rs
crates/gpu-runtime/src/: kernel_loader.rs  lib.rs  native_backend.rs
crates/nnue-format/: Cargo.toml
crates/nnue-format/examples/: clamp_stats.rs
crates/nnue-format/src/: arch_kind.rs  halfka_psqt.rs  header.rs  layerstack_v3_weights.rs  layerstack_weights.rs  lib.rs  simple_weights.rs  v102_layerstack.rs  yaneuraou.rs
crates/nnue-train/: Cargo.toml
crates/nnue-train/src/: dataloader.rs  experiment.rs  init.rs  lib.rs  optimizer.rs  schedule.rs  trainer.rs  validation.rs
crates/shogi-features/examples/: dump_effect_bucket_indices.rs
crates/shogi-features/src/: effect_bucket.rs  feature_set.rs  halfka_hm.rs  kingrank9.rs  lib.rs  progress_kpabs.rs  threat.rs  threat_exclusion.rs  threat_symmetric.rs
crates/shogi-features/src/simd/: avx2.rs  avx512.rs  mod.rs  scalar.rs  tables.rs
crates/shogi-features/tests/: feature_set.rs  progress_kpabs_smoke.rs
crates/shogi-format/: Cargo.toml
crates/shogi-format/src/: bona_piece.rs  game_result.rs  huffman_coded_pos.rs  lib.rs  packed_sfen.rs  types.rs
crates/shogi-format/tests/: psv_smoke.rs
crates/shogi-format/tests/data/: sample.psv
docs/: 00-overview.md  arch-string.md  bench-pos.ja.md  bench-pos.md  bullet_v102_save_format.md  data-layout.md  held-out-validation.ja.md  held-out-validation.md  native-cuda-benchmark.ja.md  native-cuda-benchmark.md  net-from-yaneuraou.md  net-to-yaneuraou.md  nnue-layerstack-format.md  performance.md  progress-bin.ja.md  progress-bin.md  review-checklist.md  setup.ja.md  setup.md  training-quickstart.ja.md  training-quickstart.md  training-schedule.ja.md  training-schedule.md  wrm-loss-tuning.ja.md  wrm-loss-tuning.md
docs/01-decisions/: 2026-05-09-cuda-oxide-adoption.md  2026-05-09-fused-kernel-strategy.md  2026-05-09-vendor-vs-dep.md
docs/decisions/: 2026-05-17-experiment-json.md  2026-05-19-nnue-feature-set-two-axis-model.md  2026-05-22-layerstack-dim-configurable.md  2026-06-02-norm-loss.md  2026-06-04-per-param-group-optimizer.md  2026-06-12-ft-factorizer.md  2026-06-18-shared-data-root.md  2026-06-19-threat-feature-set.md  2026-07-04-cuda-oxide-backend-cache-pin.md  2026-07-09-effect-bucket-feature-set.md  2026-07-14-layerstack-v3-per-bucket-dims.md  2026-07-15-layerstack-v3-gpu-trainer.md  2026-07-16-layerstack-v3-freeze-bucket-dims.md  2026-07-18-native-cuda-backend.md
docs/kernels/: fused-pattern-catalog.md
docs/schemas/: bench-pos-v1.schema.json  native-cuda-benchmark-v1.schema.json
docs/schemas/fixtures/: native-cuda-benchmark-v1.json
experiments/001-cuda-oxide-kpabs/: Cargo.toml  README.md
experiments/001-cuda-oxide-kpabs/src/: lib.rs  main.rs
experiments/001-cuda-oxide-kpabs/src/host/: cli.rs  games.rs  mod.rs
experiments/001-cuda-oxide-kpabs/src/kernels/: mod.rs
experiments/001-cuda-oxide-kpabs/tests/: grad_smoke.rs  host_smoke.rs
experiments/002-fused-kernels/: README.md
experiments/002-fused-kernels/src/: main.rs
scripts/: bench-pos.sh  build-kernels.sh  check-native-cuda-parity.sh  local-ci.sh  setup-cuda-oxide.sh
