[workspace]
resolver = "2"
members = [
    "crates/shogi-format",
    "crates/shogi-features",
    "crates/gpu-runtime",
    "experiments/001-cuda-oxide-kpabs",
]

# 残り crate / experiment / bin は順次追加する。
# 追加先候補:
#   crates/gpu-kernels
#   crates/nnue-train
#   crates/nnue-format
#   bins/progress_kpabs_train
#   bins/nnue_train
#   bins/nnue_eval

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/SH11235/rshogi-nnue"
authors = ["SH11235"]
rust-version = "1.85"

[workspace.dependencies]
shogi-format = { path = "crates/shogi-format" }
shogi-features = { path = "crates/shogi-features" }
gpu-runtime = { path = "crates/gpu-runtime" }
clap = { version = "4.5", features = ["derive"] }

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
