[workspace]
resolver = "2"
members = [
    "crates/shogi-format",
    "crates/shogi-features",
    "crates/gpu-kernels",
    "crates/gpu-runtime",
    "crates/nnue-format",
    "crates/nnue-train",
    "bins/progress_kpabs_train",
    "bins/nnue_train",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/SH11235/rshogi-nnue"
authors = ["SH11235"]
rust-version = "1.96"

[workspace.dependencies]
shogi-format = { path = "crates/shogi-format" }
shogi-features = { path = "crates/shogi-features" }
gpu-kernels = { path = "crates/gpu-kernels" }
gpu-runtime = { path = "crates/gpu-runtime" }
nnue-format = { path = "crates/nnue-format" }
nnue-train = { path = "crates/nnue-train" }
clap = { version = "4.5", features = ["derive"] }

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
