[workspace]
resolver = "2"
members = [
    "crates/shogi-format",
    "crates/shogi-features",
    "crates/gpu-kernels",
    "crates/gpu-runtime",
    "crates/nnue-format",
    "crates/nnue-train",
    "bins/progress_kpabs_train",
    "bins/nnue_train",
    "bins/progress_bucket_survey",
    "bins/eval_sfen",
    "bins/net_header_rewrite",
    "bins/threat_symmetric_survey",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/SH11235/tatara"
authors = ["SH11235"]
rust-version = "1.96"

[workspace.dependencies]
shogi-format = { path = "crates/shogi-format" }
shogi-features = { path = "crates/shogi-features" }
gpu-kernels = { path = "crates/gpu-kernels" }
gpu-runtime = { path = "crates/gpu-runtime" }
nnue-format = { path = "crates/nnue-format" }
nnue-train = { path = "crates/nnue-train" }
clap = { version = "4.5", features = ["derive"] }

# cuda-oxide (Rust → PTX rustc backend)。ABI が rustc internal に張り付いた
# alpha crate のため git commit pin で取り込み、rev はこの 3 行を単一情報源と
# する。kernel をビルドする cargo-oxide ツールも同じ rev でなければ codegen
# backend ABI がずれるため、scripts/setup-cuda-oxide.sh が Cargo.lock からこの
# rev を読んで `cargo install --rev` する。channel は rust-toolchain.toml と
# 必ず一致させる (ずれると link-time fail)。選定理由は
# docs/decisions/2026-05-09-cuda-oxide-adoption.md、手順は docs/setup.md。
cuda-core = { git = "https://github.com/NVlabs/cuda-oxide.git", rev = "b5d35e0" }
cuda-host = { git = "https://github.com/NVlabs/cuda-oxide.git", rev = "b5d35e0" }
cuda-device = { git = "https://github.com/NVlabs/cuda-oxide.git", rev = "b5d35e0" }

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
