[package]
name = "eval-sfen"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
publish = false

[lints]
workspace = true

[[bin]]
name = "eval_sfen"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
gpu-kernels = { workspace = true }
nnue-format = { workspace = true }
shogi-features = { workspace = true }
shogi-format = { workspace = true }
