[package]
name = "net-to-yo"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
publish = false

[lints]
workspace = true

[[bin]]
name = "net_to_yo"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
nnue-format = { workspace = true }
shogi-features = { workspace = true }
