[package]
# package 名は library crate `nnue-train` と衝突するため `nnue-trainer` を使い、
# 実行ファイル名は `[[bin]] name` で `nnue-train` に揃える。
name = "nnue-trainer"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
publish = false

[lints]
workspace = true

[[bin]]
name = "nnue-train"
path = "src/main.rs"

[dependencies]
# host 側ロジック (schedule / dataloader / optimizer / trainer loop) は
# library crate `nnue-train` 側、本 bin は GPU `#[kernel]` 定義と
# kernel launch、CLI、save_quantised 呼び出しだけを行う。
nnue-train = { workspace = true }
nnue-format = { workspace = true }
shogi-format = { workspace = true }
shogi-features = { workspace = true }
gpu-kernels = { workspace = true }
gpu-runtime = { workspace = true }
clap = { workspace = true }

# cuda-oxide device 側 API (`#[kernel]` / DisjointSlice / atomics) + host 側
# launch (`cuda_launch!` macro)。`cuda-core` は `cuda_launch!` の展開で参照
# されるため bin の direct dep として明示する必要がある。rev は workspace 全体で
# 揃え、`rust-toolchain.toml` の channel とも整合させる。
cuda-core = { git = "https://github.com/NVlabs/cuda-oxide.git", rev = "6de0509" }
cuda-device = { git = "https://github.com/NVlabs/cuda-oxide.git", rev = "6de0509" }
cuda-host = { git = "https://github.com/NVlabs/cuda-oxide.git", rev = "6de0509" }
