[package]
# package 名は library crate `nnue-train` と衝突するため `nnue-trainer` を使い、
# 実行ファイル名は `[[bin]] name` で `nnue-train` に揃える。
name = "nnue-trainer"
version = "0.5.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
publish = false

[features]
# `--no-default-features` は CI 用の CPU-testable subset のみを compile し、生成 binary では学習を実行できない。
default = ["gpu", "cuda-oxide"]
gpu = ["dep:gpu-runtime"]
cuda-oxide = [
    "gpu",
    "dep:cuda-core",
    "dep:cuda-device",
    "dep:cuda-host",
    "gpu-runtime/cuda-oxide",
]
# CUDA C++ device kernels launched through the cuda-oxide host runtime, used as the comparison
# oracle for the portable host runtime.
native-cuda = ["cuda-oxide", "dep:cuda-native-runtime", "cuda-native-runtime/native-cuda"]
# CUDA C++ kernels + portable Driver API host runtime for Linux/WSL and native Windows. Build with
# --no-default-features so the cuda-oxide crates are absent.
native-cuda-host = [
    "gpu",
    "dep:cuda-native-runtime",
    "cuda-native-runtime/native-cuda",
    "gpu-runtime/native-cuda",
]

[lints]
workspace = true

[[bin]]
name = "nnue-train"
path = "src/main.rs"

[dependencies]
# host 側ロジック (schedule / dataloader / optimizer / trainer loop) は
# library crate `nnue-train` 側、本 bin は GPU `#[kernel]` 定義と
# kernel launch、CLI、save_quantised 呼び出しだけを行う。
nnue-train = { workspace = true }
nnue-format = { workspace = true }
shogi-format = { workspace = true }
shogi-features = { workspace = true }
gpu-kernels = { workspace = true }
gpu-runtime = { workspace = true, optional = true }
cuda-native-runtime = { workspace = true, optional = true }
clap = { workspace = true }

# cuda-oxide device 側 API (`#[kernel]` / DisjointSlice / atomics) + host 側
# launch (`cuda_launch!` macro)。`cuda-core` は `cuda_launch!` の展開で参照
# されるため bin の direct dep として明示する必要がある。git rev pin は root
# Cargo.toml の [workspace.dependencies] に集約。
cuda-core = { workspace = true, optional = true }
cuda-device = { workspace = true, optional = true }
cuda-host = { workspace = true, optional = true }

[dev-dependencies]
# builder が experiment.json に記録した `results.fv_scale` を読み出して検証する。
serde_json = "1"
# production CUDA launch inventoryをRust token単位で走査し、コメントや文字列内の
# delimiterをmacro構文と誤認しないようにする。
proc-macro2 = "1"
