[package]
name = "progress-bucket-survey"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
publish = false

[lints]
workspace = true

[[bin]]
name = "progress-bucket-survey"
path = "src/main.rs"

[dependencies]
shogi-format = { workspace = true }
shogi-features = { workspace = true }
clap = { workspace = true }
