[package]
name = "threat-symmetric-survey"
version = "0.5.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
publish = false

[lints]
workspace = true

[[bin]]
name = "threat-symmetric-survey"
path = "src/main.rs"

[dependencies]
shogi-format = { workspace = true }
shogi-features = { workspace = true }
clap = { workspace = true }
