[package]
name = "cuda-native-runtime"
version = "0.5.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
publish = false

[features]
default = []
native-cuda = []

[lints]
workspace = true

[dependencies]
thiserror = "2"

[dev-dependencies]
gpu-kernels = { workspace = true }
