[package]
name = "gpu-kernels"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
publish = false

[lints]
workspace = true

[dependencies]
# GPU kernel 実装と CPU reference 実装を提供する crate。kernel は scalar
# f32/f64/i32/u64 配列のみを扱い、上位の shogi-format / shogi-features 型には
# 依存しない (kernel は型に対して polymorphic、orchestration 側で variant を選ぶ)。
