[package]
name = "gpu-runtime"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

# cuda-oxide は ABI が rustc internal に張り付いた alpha crate のため commit
# pin で取り込む。`rust-toolchain.toml` の channel と必ず揃える
# (channel ずれは link-time fail)。詳細な選定理由は
# docs/decisions/2026-05-09-cuda-oxide-adoption.md。
[dependencies]
cuda-core = { git = "https://github.com/NVlabs/cuda-oxide.git", rev = "6de0509" }
cuda-host = { git = "https://github.com/NVlabs/cuda-oxide.git", rev = "6de0509" }
thiserror = "2"
