[package]
name = "gpu-runtime"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

# cuda-oxide host API。git rev pin と選定理由は root Cargo.toml の
# [workspace.dependencies] に集約。
[dependencies]
cuda-core = { workspace = true }
cuda-host = { workspace = true }
thiserror = "2"
