[package]
name = "nnue-format"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
publish = false

[lints]
workspace = true

[dependencies]
# NNUE 重みファイル (header / halfka_psqt / v102 layerstack) の (de)serialization
# 専用 crate。CPU-only、GPU 依存なし。
