[package]
name = "nnue-train"
version = "0.5.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
publish = false

[lints]
workspace = true

[dependencies]
# CPU-only training pipeline (schedule / dataloader / optimizer host state)。
# GPU `#[kernel]` 定義は cuda-oxide の bin-entry inline 制約で
# `bins/nnue_train/src/kernels/` 側に置く必要があり、本 crate は kernel launch を
# 持たず host 側ロジックのみに留める (GPU 非依存の test を CI に通すため
# `gpu-runtime` も非依存)。`gpu-kernels` は CPU reference 実装の流用のみ。
shogi-format = { workspace = true }
shogi-features = { workspace = true }
gpu-kernels = { workspace = true }
# experiment.json (構造化実験ログ) の serialise。host-only、GPU build chain 非依存。
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# `ExperimentDoc::new` が呼び出し側の `fv_scale` を素通しで記録することを、実 export 値
# (`nnue_format::{layerstack_weights::FV_SCALE, simple_weights::simple_fv_scale}`) を
# 使ったテストで担保する。
nnue-format = { workspace = true }
