[package]
name = "exp-001-cuda-oxide-kpabs"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
publish = false

[lints]
workspace = true

[dependencies]
shogi-format = { workspace = true }
shogi-features = { workspace = true }
# host loop が cuda-oxide の DeviceBuffer / CudaContext / cuda_launch! を使うため
# Stage 1-9 で gpu-runtime を依存に追加。CI runner には CUDA がないので本 crate
# は workspace `--exclude` のままにし、ローカル sm_75 box でのみ build/run する。
gpu-runtime = { workspace = true }
clap = { workspace = true }

# cuda-oxide の device 側 API (#[kernel] macro, DisjointSlice, thread::index_*)。
# rev は Stage 0-1 で動作確認した 6de0509 (gpu-runtime と同じ)。
# `cuda-host` は `#[kernel]` macro 展開先で `cuda_host::CudaKernel` trait を
# 参照するため必須、Stage 1-9 で host launch (cuda_launch!) も使う。
# `cuda-core` は cuda_launch! macro 展開で `cuda_core::launch_kernel(...)` 等を
# 参照するため explicit dep として必須。
cuda-core = { git = "https://github.com/NVlabs/cuda-oxide.git", rev = "6de0509" }
cuda-device = { git = "https://github.com/NVlabs/cuda-oxide.git", rev = "6de0509" }
cuda-host = { git = "https://github.com/NVlabs/cuda-oxide.git", rev = "6de0509" }
